--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,6 +6,6 @@
     <br>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> by Guilherme at Le Wagon
+    This page was made with <i class="fas fa-heart"></i> by Guilherme at Le Wagon
   </div>
 </div>
