--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <body>
   <%= render "layouts/navbar" %>
-  <div class="container">
+  <%= render "layouts/banner" %>
+  <div class="container card-container">
     <%= yield %>
   </div>
   <%= render "layouts/footer" %>
