--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,16 @@
-<h1 class ="text-center p-3"><%= @list.name %></h1>
-
-<h2 class="text-center mb-5">Movies</h2>
 <div class="container">
-  <%= link_to "Add a Movie", new_list_bookmark_path(@list), class: "btn btn-ghost mt-5" %>
+<h3 class ="text-center m-5"><%= @list.name %></h3>
   <%= link_to "Back To My Lists", root_path, class: "btn btn-ghost mt-5" %>
-  <div class="row mt-3">
+  <%= link_to "Add a Movie", new_list_bookmark_path(@list), class: "btn btn-ghost mt-5" %>
+  <div class="row mt-5 mb-5">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="card col-4 m-3 mx-auto card-movie" style="width: 18rem">
+      <div class="card col-4 mb-3 mx-auto card-movie" style="width: 18rem">
         <img src= <%=bookmark.movie.poster_url%> class="card-img-top pt-3 " alt="movie banner">
           <div class="card-body">
             <h5 class="card-title"><strong><%= bookmark.movie.title %></strong></h5>
             <p class="card-text"> <%= bookmark.comment %></p>
             <%= link_to bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "btn btn-primary" do  %>
-              <i class="fa-regular fa-trash-can danger"></i>
+              <i class="fa-regular fa-trash-can"></i>
             <% end %>
           </div>
     </div>
