--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,14 +1,14 @@
 .btn-ghost {
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
+  color: $light-gray;
+  border: 1px solid $light-gray;
   padding: 8px 24px;
   border-radius: 50px;
   font-weight: lighter;
   opacity: 0.6;
-  transition: opacity 0.3s ease;
+  transition: opacity 0.4s ease;
 
   &:hover {
-    background-color: #000000;
-    color: #ffffff;
+    color: $red;
+    border: 1px solid $red;
   }
 }
