--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,11 @@
 .footer {
-  background: #F4F4F4;
+  background: $raven;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
-  color: rgba(0,0,0,0.3);
+  color: $light-gray;
   position: relative;
   bottom: 0;
 }
@@ -14,7 +14,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: $light-gray;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -24,5 +24,5 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: $red;
 }
