--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,20 +1,20 @@
 .banner {
   background-size: cover;
   background-position: center;
-  padding: 250px 0;
+  padding: 200px 0;
 }
 
 .banner h1 {
   margin: 0;
-  color: white;
+  color: $light-gray;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
+  font-size: 48px;
   font-weight: bold;
 }
 
 .banner p {
-  font-size: 20px;
-  color: white;
+  font-size: 32px;
+  color: $light-gray;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
