--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,11 +22,18 @@ h3 {
   color: $light-gray;
 
   &:hover {
-      transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+      transform: scale(1.05); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
 }
 
 .card-img-top {
   border-radius: 12px;
   box-shadow: 0 0 15px #00000033;
+}
+
+
+.card-body {
+  text-decoration: none;
+  text-align: center;
+  color: $light-gray;
 }
