--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,9 +1,8 @@
-<h1>Add a Movie for <%= @list.name %></h1>
+<h3>Add a Movie for <%= @list.name %></h3>
 
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
   <%= f.input :movie_id, collection: @movies%>
-  <%= f.submit 'Add', class: 'btn btn-primary' %>
+  <%= f.submit 'Add', class: "btn btn-ghost mt-3" %>
+  <%= link_to "Back", list_path(@list), class: "btn btn-ghost mt-3" %>
 <% end %>
-
-<%= link_to "Back", list_path(@list) %>
