--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,15 +1,13 @@
+<h3 class="text-center m-4">My Watchlists</h3>
 
 
-<%= link_to "Create a Movie List", new_list_path, class: "btn btn-primary"%>
-
-
-  <div class="row mt-5 mb-5">
+  <div class="row m-5">
     <% @lists.each do |list| %>
-      <div class="card col-4 mb-3 mx-auto card-movie" style="width: 18rem">
-        <img src= <%=asset_path('card-list-cover.png')%> class="card-img-top pt-3 " alt="movie banner">
-          <div class="card-body">
-            <h5 class="card-title"><strong> <%=link_to list.name, list_path(list) %></strong></h5>
-             <%= link_to list_path(list), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "btn btn-primary" do  %>
+      <div class="card col-4 mb-3 mx-auto card-movie" style="width: 24rem">
+        <img src= <%=asset_path('card-list-cover.png')%> class="card-img-top mt-3" alt="movie banner">
+          <div class="card-body d-flex justify-content-between">
+            <h5 class="p-4"><%=link_to list.name, list_path(list) %></h5>
+             <%= link_to list_path(list), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "btn btn-ghost-bordeless p-4" do  %>
               <i class="fa-regular fa-trash-can"></i>
             <% end %>
           </div>
