--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,9 +1,7 @@
-<h1>New List</h1>
+<h3 class="text-center m-5">New List</h3>
 
 <%= render "form", list: @list %>
 
 <br>
 
-<div>
-  <%= link_to "Back to My Lists", lists_path %>
-</div>
+<%= link_to "Back to My Lists", lists_path %>
