--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,4 +1,4 @@
-<h3>Add a Movie for <%= @list.name %></h3>
+<h3 class="text-center my-3">Add a Movie for <%= @list.name %></h3>
 
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
