--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,6 +16,7 @@ h3 {
   overflow: hidden;
   box-shadow: 0 0 15px #00000033;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-align: center;
   border-radius: 12px;
   transition: transform .2s;
   background-color: $slate;
@@ -31,9 +32,12 @@ h3 {
   box-shadow: 0 0 15px #00000033;
 }
 
-
-.card-body {
-  text-decoration: none;
-  text-align: center;
+.card-index-title {
   color: $light-gray;
+  font-size: 24px;
+  font-weight: bold;
+
+  &:hover {
+    color: $red;
+  }
 }
