--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -7,6 +7,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: " btn btn-ghost mt-3"%>
+    <%= link_to "Back to List", lists_path, class: "btn btn-ghost mt-3"%>
   </div>
 <% end %>
