--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,7 +6,7 @@
       <div class="card col-4 mb-3 mx-auto card-movie" style="width: 24rem">
         <img src= <%=asset_path('card-list-cover.png')%> class="card-img-top mt-3" alt="movie banner">
           <div class="card-body d-flex justify-content-between">
-            <h5 class="p-4"><%=link_to list.name, list_path(list) %></h5>
+            <h5 class="p-4"><%=link_to list.name, list_path(list), class: "card-index-title text-decoration-none"%></h5>
              <%= link_to list_path(list), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "btn btn-ghost-bordeless p-4" do  %>
               <i class="fa-regular fa-trash-can"></i>
             <% end %>
