implement api further

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
-  <%= f.input :movie_id, collection: @movies%>
+  <%= f.input :movie_id, collection: @movies.map {|movie| [movie['title'], movie['id']]} %>
   <%= f.submit 'Add', class: "btn btn-ghost mt-3" %>
   <%= link_to "Back", list_path(@list), class: "btn btn-ghost mt-3" %>
 <% end %>
