--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,7 +2,18 @@
 
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
-  <%= f.input :movie_id, collection: @movies.map {|movie| [movie['title'], movie['id']]} %>
+  <%= f.input :movie_id, collection: (@movies || []).map { |movie| [movie['title'], movie['id'].to_i] }, prompt: 'Select a movie' %>
   <%= f.submit 'Add', class: "btn btn-ghost mt-3" %>
   <%= link_to "Back", list_path(@list), class: "btn btn-ghost mt-3" %>
+<% end %>
+
+<% if @bookmark.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@bookmark.errors.count, "error") %> prohibited this bookmark from being saved:</h2>
+    <ul>
+      <% @bookmark.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
