--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,9 +5,10 @@
   <div class="row mt-5 mb-5">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="card col-4 mb-3 mx-auto card-movie" style="width: 24rem">
-        <img src= <%=bookmark.movie.poster_url%> class="card-img-top pt-3 " alt="movie banner">
+        <img src="https://image.tmdb.org/t/p/w500<%= bookmark.movie.poster_url %>" class="card-img-top pt-3 " alt="movie banner">
           <div class="card-body">
             <h5 class="card-title"><strong><%= bookmark.movie.title %></strong></h5>
+            <p class="card-text"><%=bookmark.movie.overview %></p>
             <p class="card-text"> <%= bookmark.comment %></p>
             <%= link_to bookmark_path(bookmark), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: "btn btn-ghost-bordeless" do  %>
               <i class="fa-regular fa-trash-can"></i>
